# jax_memory_monitor

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  xla_mem_bridge.cc
.github/workflows/: release.yml  update_proto.yml
jax_memory_monitor/: __init__.py  jax_peak_memory_monitor.py  profile.proto  profile_pb2.py  xla_resource_monitor.py
tests/: test_io_callback.py  test_jax_peak_memory_monitor.py  test_memory_monitor.py  test_xla_resource_monitor.py
